# projet-fin-anne-c

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  design-qa.md  index.html  package.json
.github/workflows/: ci.yml
api/: ai.js
deploy/: Dockerfile  itchio.md
docs/: api.md  architecture.md  demo-script.md  vercel-deployment.md
include/memocoach/: ai_client.h  db.h  json_utils.h  util.h
scripts/: build-web.mjs  build.ps1  demo.sh  dev-server.mjs  run-tests.ps1
src/: ai_client.c  db.c  json_utils.c  main.c  util.c
tests/: test_ai_client.c  test_db.c  test_json_utils.c
web/: app.js  styles.css
